--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Welcome to KalaniJ's Website
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  This is the website of KalaniJ. A great guy and a technology whiz.
+  This is the website of KalaniJ. A great guy and a technology whiz. Also, Hello David and Elias. Warframe is fun!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: KalaniJ
